--- a/example/out1.html
+++ b/example/out1.html
@@ -1922,7 +1922,7 @@ function requestTimeout(timeout) {
 
 <ul>
 <li>
-<td><input id="search_the_key" type="value" value="use js regrex,example keyA|keyB" /></td>
+<td><input id="search_the_key" type="value" value="use js regrex,example keywordA|keywordB"  size=50 title="use js regrex,example keywordA|keywordB" /></td>
 <td><input value="search by keyword of feature id" type="button" onclick="search_by_key()" /></td>
 </li>
 </ul>
@@ -1999,7 +1999,10 @@ function search_by_key(){
 <div id='container' style="width: 1300px; height: 500px; border:1px solid black;display:none">
 <svg id='demo-tiger' xmlns='http://www.w3.org/2000/svg' style='display: inline; width: inherit; min-width: inherit; max-width: inherit; height: inherit; min-height: inherit; max-height: inherit;' viewBox="0 0 1300 500" version="1.1">
 <text x="117" y="150" font-size="15px" fill="black"  text-anchor='end' alignment-baseline="middle" >pO83_CORR</text>
+<defs>    <clipPath id="cut-pO83_CORR-NC_017659.1-1"><path d="M130 50 L1105 50 L1105 250 L130 250 Z" />     </clipPath>  </defs>
 <text x="117" y="350" font-size="15px" fill="black"  text-anchor='end' alignment-baseline="middle" >pO83_CORR.indel</text>
+<defs>    <clipPath id="cut-pO83_CORR.indel-NC_017659.1.fake-1"><path d="M130 250 L723.976628895184 250 L723.976628895184 450 L130 450 Z" />     </clipPath>  </defs>
+<defs>    <clipPath id="cut-pO83_CORR.indel-NC_017659.1.fake-1"><path d="M130 250 L723.976628895184 250 L723.976628895184 450 L130 450 Z" />     </clipPath>  </defs>
 
 <line x1="130" y1="480" x2="1105" y2="480" style="stroke:green;stroke-width:0.5"/>
 <line x1="130" y1="475" x2="130" y2="480" style="stroke:green;stroke-width:0.5;opacity:1"/>
@@ -2023,13 +2026,11 @@ function search_by_key(){
 
 			<g class='myth'><title><tspan>feature_id -> pO83_CORR.NC_017659.1.5460.147060.1.+</tspan>
 <tspan>track name -> pO83_CORR</tspan>
-<tspan>ref start-end -> NC_017659.1:5460-147060</tspan></title>
-			<polygon id="pO83_CORR.NC_017659.1.5460.147060.1.+" points="884.036827195467,149 884.036827195467,151 20439.4157223796,151 20439.4157223796,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<tspan>ref start-end -> NC_017659.1:5460-147060</tspan></title><path id="pO83_CORR.NC_017659.1.5460.147060.1.+" path d="M884.036827195467 149 L884.036827195467 151 L20439.4157223796 151 L20439.4157223796 149 Z" clip-path="url(#cut-pO83_CORR-NC_017659.1-1)" style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 			<g class='myth'><title><tspan>feature_id -> pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+</tspan>
 <tspan>track name -> pO83_CORR.indel</tspan>
-<tspan>ref start-end -> NC_017659.1.fake:5460-147060</tspan></title>
-			<polygon id="pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+" points="649.401558073654,349 649.401558073654,351 20204.7804532578,351 20204.7804532578,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<tspan>ref start-end -> NC_017659.1.fake:5460-147060</tspan></title><path id="pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+" path d="M649.401558073654 349 L649.401558073654 351 L20204.7804532578 351 L20204.7804532578 349 Z" clip-path="url(#cut-pO83_CORR.indel-NC_017659.1.fake-1)" style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 <g class='myth'><title><tspan>pO83_CORR.NC_017659.1.5460.147060.1.+ -> pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+</tspan>
 <tspan>query -> NC_017659.1.fake:5460:147060</tspan>
@@ -2038,21 +2039,19 @@ function search_by_key(){
 <tspan>indentity -> 100.00%</tspan>
 <tspan>coverage -> query:100%</tspan>
 <tspan>target:100%</tspan></title>
- <defs>    <clipPath id="cut-off-bottom-884.036827195467-157-20439.4157223796-157-20204.7804532578-343-649.401558073654-343"><path d="M130 349 L723.976628895184 349 L1105 149 L130 149 Z" /></clipPath>  </defs>
-<path d="M884.036827195467 157 L20439.4157223796 157 L20204.7804532578 343 L649.401558073654 343 Z"  clip-path="url(#cut-off-bottom-884.036827195467-157-20439.4157223796-157-20204.7804532578-343-649.401558073654-343)" style="stroke:black;stroke-width:0;fill:orange;opacity:0.5" />
+ <defs>    <clipPath id="130-349-723.976628895184-349-1105-149-130-149"><path d="M130 349 L723.976628895184 349 L1105 149 L130 149 Z" /></clipPath>  </defs>
+<path d="M884.036827195467 157 L20439.4157223796 157 L20204.7804532578 343 L649.401558073654 343 Z"  clip-path="url(#130-349-723.976628895184-349-1105-149-130-149)" style="stroke:black;stroke-width:0;fill:orange;opacity:0.5" />
 </g>
 
 
 
 			<g class='myth'><title><tspan>feature_id -> pO83_CORR.NC_017659.1.2101.5468.1.+</tspan>
 <tspan>track name -> pO83_CORR</tspan>
-<tspan>ref start-end -> NC_017659.1:2101-5468</tspan></title>
-			<polygon id="pO83_CORR.NC_017659.1.2101.5468.1.+" points="420.152266288952,149 420.152266288952,151 885.279745042493,151 885.279745042493,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<tspan>ref start-end -> NC_017659.1:2101-5468</tspan></title><polygon id="pO83_CORR.NC_017659.1.2101.5468.1.+" points="420.152266288952,149 420.152266288952,151 885.279745042493,151 885.279745042493,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 			<g class='myth'><title><tspan>feature_id -> pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+</tspan>
 <tspan>track name -> pO83_CORR.indel</tspan>
-<tspan>ref start-end -> NC_017659.1.fake:1891-5257</tspan></title>
-			<polygon id="pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+" points="156.515580736544,349 156.515580736544,351 621.504957507082,351 621.504957507082,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<tspan>ref start-end -> NC_017659.1.fake:1891-5257</tspan></title><polygon id="pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+" points="156.515580736544,349 156.515580736544,351 621.504957507082,351 621.504957507082,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 <g class='myth'><title><tspan>pO83_CORR.NC_017659.1.2101.5468.1.+ -> pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+</tspan>
 <tspan>query -> NC_017659.1.fake:1891:5257</tspan>
@@ -2068,13 +2067,11 @@ function search_by_key(){
 
 			<g class='myth'><title><tspan>feature_id -> pO83_CORR.NC_017659.1.1.1898.1.+</tspan>
 <tspan>track name -> pO83_CORR</tspan>
-<tspan>ref start-end -> NC_017659.1:1-1898</tspan></title>
-			<polygon id="pO83_CORR.NC_017659.1.1.1898.1.+" points="130.138101983003,149 130.138101983003,151 392.25566572238,151 392.25566572238,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<tspan>ref start-end -> NC_017659.1:1-1898</tspan></title><polygon id="pO83_CORR.NC_017659.1.1.1898.1.+" points="130.138101983003,149 130.138101983003,151 392.25566572238,151 392.25566572238,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 			<g class='myth'><title><tspan>feature_id -> pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+</tspan>
 <tspan>track name -> pO83_CORR.indel</tspan>
-<tspan>ref start-end -> NC_017659.1.fake:1-1898</tspan></title>
-			<polygon id="pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+" points="-104.49716713881,349 -104.49716713881,351 157.620396600567,351 157.620396600567,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<tspan>ref start-end -> NC_017659.1.fake:1-1898</tspan></title><path id="pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+" path d="M-104.49716713881 349 L-104.49716713881 351 L157.620396600567 351 L157.620396600567 349 Z" clip-path="url(#cut-pO83_CORR.indel-NC_017659.1.fake-1)" style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 <g class='myth'><title><tspan>pO83_CORR.NC_017659.1.1.1898.1.+ -> pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+</tspan>
 <tspan>query -> NC_017659.1.fake:1:1898</tspan>
@@ -2083,21 +2080,19 @@ function search_by_key(){
 <tspan>indentity -> 99.89%</tspan>
 <tspan>coverage -> query:100%</tspan>
 <tspan>target:100%</tspan></title>
- <defs>    <clipPath id="cut-off-bottom-130.138101983003-157-392.25566572238-157-157.620396600567-343--104.49716713881-343"><path d="M130 349 L723.976628895184 349 L1105 149 L130 149 Z" /></clipPath>  </defs>
-<path d="M130.138101983003 157 L392.25566572238 157 L157.620396600567 343 L-104.49716713881 343 Z"  clip-path="url(#cut-off-bottom-130.138101983003-157-392.25566572238-157-157.620396600567-343--104.49716713881-343)" style="stroke:black;stroke-width:0;fill:orange;opacity:0.49945" />
+ <defs>    <clipPath id="130-349-723.976628895184-349-1105-149-130-149"><path d="M130 349 L723.976628895184 349 L1105 149 L130 149 Z" /></clipPath>  </defs>
+<path d="M130.138101983003 157 L392.25566572238 157 L157.620396600567 343 L-104.49716713881 343 Z"  clip-path="url(#130-349-723.976628895184-349-1105-149-130-149)" style="stroke:black;stroke-width:0;fill:orange;opacity:0.49945" />
 </g>
 
 
 
 			<g class='myth'><title><tspan>feature_id -> pO83_CORR.NC_017659.1.1891.2100.1.+</tspan>
 <tspan>track name -> pO83_CORR</tspan>
-<tspan>ref start-end -> NC_017659.1:1891-2100</tspan></title>
-			<polygon id="pO83_CORR.NC_017659.1.1891.2100.1.+" points="391.150849858357,149 391.150849858357,151 420.152266288952,151 420.152266288952,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<tspan>ref start-end -> NC_017659.1:1891-2100</tspan></title><polygon id="pO83_CORR.NC_017659.1.1891.2100.1.+" points="391.150849858357,149 391.150849858357,151 420.152266288952,151 420.152266288952,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 			<g class='myth'><title><tspan>feature_id -> pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+</tspan>
 <tspan>track name -> pO83_CORR.indel</tspan>
-<tspan>ref start-end -> NC_017659.1.fake:5251-5460</tspan></title>
-			<polygon id="pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+" points="620.538243626062,349 620.538243626062,351 649.539660056657,351 649.539660056657,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<tspan>ref start-end -> NC_017659.1.fake:5251-5460</tspan></title><polygon id="pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+" points="620.538243626062,349 620.538243626062,351 649.539660056657,351 649.539660056657,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 <g class='myth'><title><tspan>pO83_CORR.NC_017659.1.1891.2100.1.+ -> pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+</tspan>
 <tspan>query -> NC_017659.1.fake:5251:5460</tspan>
@@ -2116,8 +2111,9 @@ function search_by_key(){
 
     <script>
       // Don't use window.onLoad like this in production, because it can only listen to one function.
-	document.getElementById("container").style.width=document.documentElement.clientWidth*0.99 + "px";
-	document.getElementById("container").style.height=document.documentElement.clientHeight*0.91 + "px";
+	document.getElementById("container").style.width=document.documentElement.clientWidth*0.97 + "px";
+	document.getElementById("container").style.height=document.documentElement.clientHeight*0.93 + "px";
+	document.getElementById("container").style['margin']='auto';
 	document.getElementById("container").style.display="block";
       window.onload = function() {
         // Expose to window namespase for testing purposes
