--- a/example/out4.html
+++ b/example/out4.html
@@ -1923,6 +1923,9 @@ var tracks_heigh={"pO83_CORR":200,"pO83_CORR.indel":200};</script>
 
 <ul>
 <li>
+<td><input id="hightligh_ratio" type="value" value="1"  size=5 title="highlight ratio" /></td>
+</li><br>
+<li>
 <td><input id="search_the_key" type="value" value="use js regrex,example keywordA|keywordB"  size=50 title="use js regrex,example keywordA|keywordB" /></td>
 <td><input value="search by keyword of feature id" type="button" onclick="search_by_key()" /></td>
 </li><br>
@@ -1940,6 +1943,17 @@ function refill(chi, fill,opacity,stroke_width){
 		chi.style['stroke']=fill;
 }
 //blocks_start_ends_cord
+
+function get_hightligh_ratio(){
+	var hightligh_ratio=document.getElementById("hightligh_ratio").value;
+	hightligh_ratio = hightligh_ratio.replace(/^\s*|\s*$/g, "");
+	if(hightligh_ratio.match(/[^\d^\.]/)){
+		alert(hightligh_ratio+" should be number, like 1.1 or 1 or 2");
+		return 0;
+	}
+	hightligh_ratio = parseFloat(hightligh_ratio);
+	return hightligh_ratio;
+}
 function search_by_rg(){
 	if(window.refresh_flag >0){
 		alert('sorry, you neet to refresh the page, then you can search the region yet~');
@@ -1951,6 +1965,10 @@ function search_by_rg(){
 	search_the_rg = search_the_rg.replace(/^\s*/, "");
 	search_the_rg = search_the_rg.replace(/;\s*$/, "");
 	
+	var hightligh_ratio = get_hightligh_ratio();
+	console.log("hightligh_ratio is "+hightligh_ratio);
+	if(hightligh_ratio == 0){return 0}
+
 	var rgs = search_the_rg.split(/;/);
 	for (var rg_index in rgs){
 		rgs[rg_index] = rgs[rg_index].replace(/\s*$/, "");
@@ -1989,15 +2007,22 @@ function search_by_rg(){
 								var height= tracks_heigh[track_name];
 								var y=(start_y+end_y)/2 - height;
 								var width=scale_ratio*(end-start)/1000;
+								var pos;
 								if(y<0){y=0};
+								
+								width *=hightligh_ratio;
+
 								/// cread a child ,demo-tiger
 								if(rg_index == 1){
+									x = x + scale_ratio;
+									pos = rg_pos + 1;
+								}else{
 									x = x - width;
+									pos = rg_pos - 1;
 								}
-								width *=3;
 								 var g = document.createElementNS(svgNS,'g');
 								 var title = document.createElementNS(svgNS,'title');
-								 var title_text = document.createTextNode(track_name+":"+chr_id+":"+rg_pos);
+								 var title_text = document.createTextNode(track_name+":"+chr_id+": "+pos+"th bp");
 								 var rect = document.createElementNS(svgNS,'rect');
 								 rect.setAttribute('x',x);
 								 rect.setAttribute('y',y);
@@ -2031,6 +2056,7 @@ function search_by_rg(){
 
 
 function search_by_key(){
+	var hightlight_time = 6;
 	var search_result_num = 0;
 	var new_color = "red";
 	var new_opacity = 1;
@@ -2038,7 +2064,12 @@ function search_by_key(){
 	var gs = document.getElementsByClassName("myth");
 	var key = document.getElementById("search_the_key").value;
 	
-	if(key.length == 0){return 1;}
+	if(key.length == 0){alert("keyword is empty");return 1;}
+
+	var hightligh_ratio = get_hightligh_ratio();
+	console.log("hightligh_ratio is "+hightligh_ratio);
+	if(hightligh_ratio == 0){return 0}
+
 	var re = new RegExp(key,"g");
 	for (var i=0; i < gs.length; i++){
 		if(gs[i].innerHTML.match(re)){
@@ -2067,6 +2098,9 @@ function search_by_key(){
 					if(raw_stroke_width == 0 ||raw_stroke_width == "0px"){
 						new_stroke_width = 1;
 					}
+					
+					new_stroke_width *=hightligh_ratio;
+
 					children[ii].style.fill = new_color;
 					var the_time=0;
 					var color="";
@@ -2076,7 +2110,7 @@ function search_by_key(){
 					if(loops%2 == 0){alert("loops must be even,like 20, not "+loops)}
 					refill(children[ii], new_color,new_opacity, new_stroke_width);
 					for(var j=1; j<=loops; j++){ // 100 loops
-						the_time += j * 1000;
+						the_time += j * 1000 * hightlight_time;
 						if(j%2 == 0){
 							color=new_color;
 							opacity=new_opacity;
@@ -2132,22 +2166,21 @@ function search_by_key(){
 				<g class='myth'><title><tspan>feature_id -> pO83_CORR.NC_017659.1.5460.147060.1.+.1</tspan>
 <tspan>track name -> pO83_CORR</tspan>
 <tspan>ref start-end -> NC_017659.1:5460-147060</tspan></title>
-<path id="pO83_CORR.NC_017659.1.5460.147060.1.+.1"  d="M890.5 149 L890.5 151 L20613.4964285714 151 L20613.4964285714 149 Z" clip-path="url(#cut-pO83_CORR-NC_017659.1-1)" style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<path id="pO83_CORR.NC_017659.1.5460.147060.1.+.1"  d="M890.360714285714 149 L890.360714285714 151 L20613.3571428571 151 L20613.3571428571 149 Z" clip-path="url(#cut-pO83_CORR-NC_017659.1-1)" style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 				<g class='myth'><title><tspan>feature_id -> pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1</tspan>
 <tspan>track name -> pO83_CORR.indel</tspan>
 <tspan>ref start-end -> NC_017659.1.fake:5460-147060</tspan></title>
-<path id="pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1"  d="M890.5 349 L890.5 351 L20613.4964285714 351 L20613.4964285714 349 Z" clip-path="url(#cut-pO83_CORR.indel-NC_017659.1.fake-1)" style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<path id="pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1"  d="M890.360714285714 349 L890.360714285714 351 L20613.3571428571 351 L20613.3571428571 349 Z" clip-path="url(#cut-pO83_CORR.indel-NC_017659.1.fake-1)" style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 <g class='myth'><title><tspan>pO83_CORR.NC_017659.1.5460.147060.1.+.1 -> pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1</tspan>
 <tspan>query -> NC_017659.1.fake: 5460-147060</tspan>
 <tspan>target -> NC_017659.1: 5460-147060</tspan>
 <tspan>strand -> +</tspan>
 <tspan>indentity -> 100.00%</tspan>
-<tspan>coverage -> query: 141601/141601=100%</tspan>
-<tspan>target: 141601/141601=100%</tspan></title>
+<tspan>alignment_length -> 141601</tspan></title>
  <defs>    <clipPath id="clip_130-149-1105-149-130-349-1105-349"><path d="M130 149 L1105 149 L1105 349 L130 349 Z" /></clipPath>  </defs>
-<path d="M890.5 157 L20613.4964285714 157 L20613.4964285714 343 L890.5 343 Z"  clip-path="url(#clip_130-149-1105-149-130-349-1105-349)" style="stroke:black;stroke-width:0;fill:orange;opacity:0.5" />
+<path d="M890.360714285714 157 L20613.3571428571 157 L20613.3571428571 343 L890.360714285714 343 Z"  clip-path="url(#clip_130-149-1105-149-130-349-1105-349)" style="stroke:black;stroke-width:0;fill:orange;opacity:0.5" />
 </g>
 
 
@@ -2155,21 +2188,20 @@ function search_by_key(){
 				<g class='myth'><title><tspan>feature_id -> pO83_CORR.NC_017659.1.2101.5468.1.+.1</tspan>
 <tspan>track name -> pO83_CORR</tspan>
 <tspan>ref start-end -> NC_017659.1:2101-5468</tspan></title>
-<polygon id="pO83_CORR.NC_017659.1.2101.5468.1.+.1" points="422.639285714286,149 422.639285714286,151 891.753571428571,151 891.753571428571,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<polygon id="pO83_CORR.NC_017659.1.2101.5468.1.+.1" points="422.5,149 422.5,151 891.614285714286,151 891.614285714286,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 				<g class='myth'><title><tspan>feature_id -> pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1</tspan>
 <tspan>track name -> pO83_CORR.indel</tspan>
 <tspan>ref start-end -> NC_017659.1.fake:1891-5257</tspan></title>
-<polygon id="pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1" points="393.389285714286,349 393.389285714286,351 862.364285714286,351 862.364285714286,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<polygon id="pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1" points="393.25,349 393.25,351 862.225,351 862.225,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 <g class='myth'><title><tspan>pO83_CORR.NC_017659.1.2101.5468.1.+.1 -> pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1</tspan>
 <tspan>query -> NC_017659.1.fake: 1891-5257</tspan>
 <tspan>target -> NC_017659.1: 2101-5468</tspan>
 <tspan>strand -> +</tspan>
 <tspan>indentity -> 99.94%</tspan>
-<tspan>coverage -> query: 3367/3368=99.9703087885986%</tspan>
-<tspan>target: 3368/3368=100%</tspan></title>
- <polygon points="422.639285714286,157 891.753571428571,157 862.364285714286,343 393.389285714286,343" style="stroke:black;stroke-width:0;fill:orange;opacity:0.4997"/>
+<tspan>alignment_length -> 3368</tspan></title>
+ <polygon points="422.5,157 891.614285714286,157 862.225,343 393.25,343" style="stroke:black;stroke-width:0;fill:orange;opacity:0.4997"/>
 </g>
 
 
@@ -2177,21 +2209,20 @@ function search_by_key(){
 				<g class='myth'><title><tspan>feature_id -> pO83_CORR.NC_017659.1.1.1898.1.+.1</tspan>
 <tspan>track name -> pO83_CORR</tspan>
 <tspan>ref start-end -> NC_017659.1:1-1898</tspan></title>
-<polygon id="pO83_CORR.NC_017659.1.1.1898.1.+.1" points="130.139285714286,149 130.139285714286,151 394.503571428571,151 394.503571428571,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<polygon id="pO83_CORR.NC_017659.1.1.1898.1.+.1" points="130,149 130,151 394.364285714286,151 394.364285714286,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 				<g class='myth'><title><tspan>feature_id -> pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1</tspan>
 <tspan>track name -> pO83_CORR.indel</tspan>
 <tspan>ref start-end -> NC_017659.1.fake:1-1898</tspan></title>
-<polygon id="pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1" points="130.139285714286,349 130.139285714286,351 394.503571428571,351 394.503571428571,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<polygon id="pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1" points="130,349 130,351 394.364285714286,351 394.364285714286,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 <g class='myth'><title><tspan>pO83_CORR.NC_017659.1.1.1898.1.+.1 -> pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1</tspan>
 <tspan>query -> NC_017659.1.fake: 1-1898</tspan>
 <tspan>target -> NC_017659.1: 1-1898</tspan>
 <tspan>strand -> +</tspan>
 <tspan>indentity -> 99.89%</tspan>
-<tspan>coverage -> query: 1898/1898=100%</tspan>
-<tspan>target: 1898/1898=100%</tspan></title>
- <polygon points="130.139285714286,157 394.503571428571,157 394.503571428571,343 130.139285714286,343" style="stroke:black;stroke-width:0;fill:orange;opacity:0.49945"/>
+<tspan>alignment_length -> 1898</tspan></title>
+ <polygon points="130,157 394.364285714286,157 394.364285714286,343 130,343" style="stroke:black;stroke-width:0;fill:orange;opacity:0.49945"/>
 </g>
 
 
@@ -2199,21 +2230,20 @@ function search_by_key(){
 				<g class='myth'><title><tspan>feature_id -> pO83_CORR.NC_017659.1.1891.2100.1.+.1</tspan>
 <tspan>track name -> pO83_CORR</tspan>
 <tspan>ref start-end -> NC_017659.1:1891-2100</tspan></title>
-<polygon id="pO83_CORR.NC_017659.1.1891.2100.1.+.1" points="393.389285714286,149 393.389285714286,151 422.639285714286,151 422.639285714286,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<polygon id="pO83_CORR.NC_017659.1.1891.2100.1.+.1" points="393.25,149 393.25,151 422.5,151 422.5,149 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 				<g class='myth'><title><tspan>feature_id -> pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1</tspan>
 <tspan>track name -> pO83_CORR.indel</tspan>
 <tspan>ref start-end -> NC_017659.1.fake:5251-5460</tspan></title>
-<polygon id="pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1" points="861.389285714286,349 861.389285714286,351 890.639285714286,351 890.639285714286,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
+<polygon id="pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1" points="861.25,349 861.25,351 890.5,351 890.5,349 " style="fill:orange;stroke:black;stroke-width:0;opacity:0.5"/></g>
 
 <g class='myth'><title><tspan>pO83_CORR.NC_017659.1.1891.2100.1.+.1 -> pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1</tspan>
 <tspan>query -> NC_017659.1.fake: 5251-5460</tspan>
 <tspan>target -> NC_017659.1: 1891-2100</tspan>
 <tspan>strand -> +</tspan>
 <tspan>indentity -> 100.00%</tspan>
-<tspan>coverage -> query: 210/210=100%</tspan>
-<tspan>target: 210/210=100%</tspan></title>
- <polygon points="393.389285714286,157 422.639285714286,157 890.639285714286,343 861.389285714286,343" style="stroke:black;stroke-width:0;fill:orange;opacity:0.5"/>
+<tspan>alignment_length -> 210</tspan></title>
+ <polygon points="393.25,157 422.5,157 890.5,343 861.25,343" style="stroke:black;stroke-width:0;fill:orange;opacity:0.5"/>
 </g>
 
 </svg>
