--- a/example/out7.html
+++ b/example/out7.html
@@ -3,18 +3,18 @@
 <head>
 <style>
 
-ul {
-    font-size:0;
-    text-align:center
-}
-ul li {
-    display:inline;
-    zoom:1
-}
-td {
-}
-</style>
-
+		ul {
+		font-size:0;
+		text-align:center
+		}
+		ul li {
+		display:inline;
+		zoom:1
+		}
+		td {
+		}
+		</style>
+		
 
 <script>// svg-pan-zoom v3.6.0
 // https://github.com/ariutta/svg-pan-zoom
@@ -20265,7 +20265,7 @@ Object.defineProperty(exports, '__esModule', { value: true });
 })));
 //# sourceMappingURL=d3-transform.js.map</script>
 <script>var blocks_start_ends_cord={"pO83_CORR5":{"NC_017659.1":{"1":{"28000,35000":"100,409.6,843.732294617564,409.6"}}},"pO83_CORR2":{"NC_017659.1":{"1":{"7060,14060":"100,169.6,843.732294617564,169.6"}}},"pO83_CORR4":{"NC_017659.1":{"1":{"21000,28000":"100,329.6,843.732294617564,329.6"}}},"pO83_CORR3":{"NC_017659.1":{"1":{"14060,21000":"100,249.6,837.35835694051,249.6"}}},"pO83_CORR1":{"NC_017659.1":{"1":{"1,7060":"100,89.6,850,89.6"}}}};
-var tracks_heigh={"pO83_CORR5":80,"pO83_CORR2":80,"pO83_CORR4":80,"pO83_CORR3":80,"pO83_CORR1":80};var reversed_block={"pO83_CORR2":{},"pO83_CORR5":{"1":""},"pO83_CORR4":{},"pO83_CORR3":{},"pO83_CORR1":{}};var feature_id_test='gene4546';var rg_test='pO83_CORR4:NC_017659.1:21000:28000;'; var svg_width_raw = 1000; var svg_height_raw = 500; var svg_bgcolor="white";</script>
+var tracks_heigh={"pO83_CORR5":80,"pO83_CORR2":80,"pO83_CORR4":80,"pO83_CORR3":80,"pO83_CORR1":80};var reversed_block={"pO83_CORR2":{},"pO83_CORR5":{"1":""},"pO83_CORR4":{},"pO83_CORR3":{},"pO83_CORR1":{}};var feature_id_test='gene4536';var rg_test='pO83_CORR4:NC_017659.1:21000:28000;'; var svg_width_raw = 1000; var svg_height_raw = 500; var svg_bgcolor="white";</script>
 </head>
 <body>
 
@@ -20316,20 +20316,30 @@ var tracks_heigh={"pO83_CORR5":80,"pO83_CORR2":80,"pO83_CORR4":80,"pO83_CORR3":8
 
 
 
+					<g class='myth'><title><tspan>feature_id -> gene4538.blue.ellipse.1</tspan>
+<tspan>track name -> pO83_CORR1</tspan>
+<tspan>ref start-end -> NC_017659.1:1-151.613333333333</tspan></title>
+					<ellipse id="gene4538.blue.ellipse.1" cx="887.5" cy="247.6" rx="8.00000000000004" ry="4.00000000000002"  stroke="black" stroke-width="0" fill="blue" style="opacity:1"/></g>
+
 				<g class='myth'><title><tspan>feature_id -> gene4532.black.arrow.1</tspan>
 <tspan>track name -> pO83_CORR1</tspan>
-<tspan>ref start-end -> NC_017659.1:1-282.4</tspan></title>
-				<polygon id="gene4532.black.arrow.1" points="871.5,259 871.5,274 895.491501416431,274 895.491501416431,274 901.489376770538,266.5 895.491501416431,259 895.491501416431,259" style="fill:black;stroke:black;stroke-width:0;opacity:1"/></g>
+<tspan>ref start-end -> NC_017659.1:1-226.92</tspan></title>
+				<polygon id="gene4532.black.arrow.1" points="871.5,198 871.5,214 890.700849858357,214 890.700849858357,214 895.501062322946,206 890.700849858357,198 890.700849858357,198" style="fill:black;stroke:black;stroke-width:0;opacity:1"/></g>
+
+				<g class='myth'><title><tspan>feature_id -> gene4559.lengend.black.arrow.0.6</tspan>
+<tspan>track name -> pO83_CORR1</tspan>
+<tspan>ref start-end -> NC_017659.1:1-226.92</tspan></title>
+				<polygon id="gene4559.lengend.black.arrow.0.6" points="496.75,450 496.75,466 515.950849858357,466 515.950849858357,466 520.751062322946,458 515.950849858357,450 515.950849858357,450" style="fill:black;stroke:black;stroke-width:0;opacity:0.6"/></g>
+
+				<g class='myth'><title><tspan>feature_id -> gene4549.lenged.red.arrow.1</tspan>
+<tspan>track name -> pO83_CORR1</tspan>
+<tspan>ref start-end -> NC_017659.1:1-226.92</tspan></title>
+				<polygon id="gene4549.lenged.red.arrow.1" points="341.65,450 341.65,466 360.850849858357,466 360.850849858357,466 365.651062322946,458 360.850849858357,450 360.850849858357,450" style="fill:red;stroke:black;stroke-width:0;opacity:1"/></g>
 
 					<g class='myth'><title><tspan>feature_id -> gene4537.yellow.circle_point.1</tspan>
 <tspan>track name -> pO83_CORR1</tspan>
-<tspan>ref start-end -> NC_017659.1:1-141.2</tspan></title>
-					<circle id="gene4537.yellow.circle_point.1" cx="893.994688385269" cy="248.494688385269" r="7.49468838526912" stroke="black" stroke-width="0" fill="yellow" style="opacity:1"/></g>
-
-					<g class='myth'><title><tspan>feature_id -> gene4538.blue.ellipse.1</tspan>
-<tspan>track name -> pO83_CORR1</tspan>
-<tspan>ref start-end -> NC_017659.1:1-282.4</tspan></title>
-					<ellipse id="gene4538.blue.ellipse.1" cx="886.494688385269" cy="237.994688385269" rx="14.9946883852691" ry="7.5"  stroke="black" stroke-width="0" fill="blue" style="opacity:1"/></g>
+<tspan>ref start-end -> NC_017659.1:1-151.613333333333</tspan></title>
+					<circle id="gene4537.yellow.circle_point.1" cx="883.5" cy="226.8" r="8.00000000000004" stroke="black" stroke-width="0" fill="yellow" style="opacity:1"/></g>
 
 				<g class='myth'><title><tspan>feature_id -> gene4532</tspan>
 <tspan>track name -> pO83_CORR1</tspan>
@@ -20409,7 +20419,7 @@ var tracks_heigh={"pO83_CORR5":80,"pO83_CORR2":80,"pO83_CORR4":80,"pO83_CORR3":8
 				<g class='myth'><title><tspan>feature_id -> gene4549</tspan>
 <tspan>track name -> pO83_CORR4</tspan>
 <tspan>ref start-end -> NC_017659.1:21224-22315</tspan></title>
-				<polygon id="gene4549" points="123.796033994334,326.8 123.796033994334,333.2 236.614730878187,333.2 236.614730878187,333.2 239.801699716714,330 236.614730878187,326.8 236.614730878187,326.8" style="fill:rgb(50,205,50);stroke:black;stroke-width:0;opacity:1"/></g>
+				<polygon id="gene4549" points="123.796033994334,326.8 123.796033994334,333.2 236.614730878187,333.2 236.614730878187,333.2 239.801699716714,330 236.614730878187,326.8 236.614730878187,326.8" style="fill:red;stroke:black;stroke-width:0;opacity:1"/></g>
 
 				<g class='myth'><title><tspan>feature_id -> gene4550</tspan>
 <tspan>track name -> pO83_CORR4</tspan>
@@ -20454,7 +20464,7 @@ var tracks_heigh={"pO83_CORR5":80,"pO83_CORR2":80,"pO83_CORR4":80,"pO83_CORR3":8
 				<g class='myth'><title><tspan>feature_id -> gene4559</tspan>
 <tspan>track name -> pO83_CORR5</tspan>
 <tspan>ref start-end -> NC_017659.1:32221-32838</tspan></title>
-				<polygon id="gene4559" points="329.674220963173,410 332.8611898017,413.2 332.8611898017,413.2 395.325779036827,413.2 395.325779036827,406.8 332.8611898017,406.8 332.8611898017,406.8" style="fill:rgb(50,205,50);stroke:black;stroke-width:0;opacity:1"/></g>
+				<polygon id="gene4559" points="329.674220963173,410 332.8611898017,413.2 332.8611898017,413.2 395.325779036827,413.2 395.325779036827,406.8 332.8611898017,406.8 332.8611898017,406.8" style="fill:black;stroke:black;stroke-width:0;opacity:0.6"/></g>
 
 				<g class='myth'><title><tspan>feature_id -> gene4560</tspan>
 <tspan>track name -> pO83_CORR5</tspan>
@@ -20467,9 +20477,11 @@ var tracks_heigh={"pO83_CORR5":80,"pO83_CORR2":80,"pO83_CORR4":80,"pO83_CORR3":8
 				<polygon id="gene4561" points="132.71954674221,410 135.906515580737,413.2 135.906515580737,413.2 167.1388101983,413.2 167.1388101983,406.8 135.906515580737,406.8 135.906515580737,406.8" style="fill:rgb(50,205,50);stroke:black;stroke-width:0;opacity:1"/></g>
 
 
-<text class='myth'  x="904.489376770538" y="271" style="font-family:Times New Roman;font-size:15px;fill:black;text-anchor:start;" transform="rotate(0 904.489376770538 271)" >gene4532</text>
-<text class='myth'  x="904.487252124646" y="253.740970254957" style="font-family:Times New Roman;font-size:15px;fill:black;text-anchor:start;" transform="rotate(0 904.487252124646 253.740970254957)" >gene4537</text>
-<text class='myth'  x="907.487252124646" y="249.990439093484" style="font-family:Times New Roman;font-size:15px;fill:black;text-anchor:start;" transform="rotate(0 907.487252124646 249.990439093484)" >gene4538</text>
+<text class='myth'  x="897.1" y="247.6" style="font-family:Times New Roman;font-size:15px;fill:black;text-anchor:start; alignment-baseline:middle;" transform="rotate(0 897.1 247.6)" >gene4538</text>
+<text class='myth'  x="897.101062322946" y="206" style="font-family:Times New Roman;font-size:15px;fill:black;text-anchor:start; alignment-baseline:middle;" transform="rotate(0 897.101062322946 206)" >gene4532</text>
+<text class='myth'  x="522.351062322946" y="458" style="font-family:Times New Roman;font-size:15px;fill:black;text-anchor:start; alignment-baseline:middle;" transform="rotate(0 522.351062322946 458)" >gene4559.lengend</text>
+<text class='myth'  x="367.251062322946" y="458" style="font-family:Times New Roman;font-size:15px;fill:black;text-anchor:start; alignment-baseline:middle;" transform="rotate(0 367.251062322946 458)" >gene4549.lenged</text>
+<text class='myth'  x="893.1" y="226.8" style="font-family:Times New Roman;font-size:15px;fill:black;text-anchor:start; alignment-baseline:middle;" transform="rotate(0 893.1 226.8)" >gene4537</text>
 <text class='myth'  x="404.950685552408" y="86.8" style="font-family:Times New Roman;font-size:10px;fill:black;text-anchor:middle;" transform="rotate(0 404.950685552408 86.8)" >gene4532</text>
 <text class='myth'  x="194.185813031161" y="161.04" style="font-family:Times New Roman;font-size:10px;fill:black;text-anchor:middle;" transform="rotate(0 194.185813031161 161.04)" >gene4534</text>
 <text class='myth'  x="319.274339943343" y="161.04" style="font-family:Times New Roman;font-size:10px;fill:black;text-anchor:middle;" transform="rotate(0 319.274339943343 161.04)" >gene4535</text>
@@ -20499,54 +20511,54 @@ var tracks_heigh={"pO83_CORR5":80,"pO83_CORR2":80,"pO83_CORR4":80,"pO83_CORR3":8
 <text class='myth'  x="149.993178470255" y="401.04" style="font-family:Times New Roman;font-size:10px;fill:black;text-anchor:middle;" transform="rotate(0 149.993178470255 401.04)" >gene4561</text>
 
 
-<text class='myth' x="474" y="98.1" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 474 98.1)" >NC_017659.1:1-7060bp</text>
-<text class='myth' x="470.866147308782" y="178.1" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 470.866147308782 178.1)" >NC_017659.1:7060-14060bp</text>
-<text class='myth' x="467.679178470255" y="258.1" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 467.679178470255 258.1)" >NC_017659.1:14060-21000bp</text>
-<text class='myth' x="470.866147308782" y="338.1" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 470.866147308782 338.1)" >NC_017659.1:21000-28000bp</text>
-<text class='myth' x="470.866147308782" y="418.6" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 470.866147308782 418.6)" >NC_017659.1:reverse:112061-119061(28000-35000)bp</text>
+<text class='myth' x="474" y="98.6" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 474 98.6)" >NC_017659.1:1-7060bp</text>
+<text class='myth' x="470.866147308782" y="178.6" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 470.866147308782 178.6)" >NC_017659.1:7060-14060bp</text>
+<text class='myth' x="467.679178470255" y="258.6" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 467.679178470255 258.6)" >NC_017659.1:14060-21000bp</text>
+<text class='myth' x="470.866147308782" y="338.6" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 470.866147308782 338.6)" >NC_017659.1:21000-28000bp</text>
+<text class='myth' x="470.866147308782" y="419.1" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 470.866147308782 419.1)" >NC_017659.1:reverse:112061-119061(28000-35000)bp</text>
 
 </svg>
  </div>
-    <button id="enable" style='display:none'>enable</button>
-    <button id="disable" style='display:none'>disable</button>
-    <script>
-	window.refresh_flag = 0 ;
-    // Don't use window.onLoad like this in production, because it can only listen to one function.
-	document.getElementById("container").style.width=document.documentElement.clientWidth*0.98 + "px";
-	document.getElementById("container").style.height=document.documentElement.clientHeight*0.93 + "px";
-	document.getElementById("container").style['margin']='auto';
-	document.getElementById("container").style.display="block";
-    function svgpanzoom(the_alert) {
-	  if(window.hasOwnProperty("zoomTiger")){
-	  	if(the_alert){alert('there is not need to hit me anymore~');}
-	  	return 0
-	  }
-	  console.log("start svgpanzoom")
-	  window.refresh_flag +=1 ;
-      // Expose to window namespase for testing purposes
+		<button id="enable" style='display:none'>enable</button>
+		<button id="disable" style='display:none'>disable</button>
+		<script>
+		window.refresh_flag = 0 ;
+		// Don't use window.onLoad like this in production, because it can only listen to one function.
+		document.getElementById("container").style.width=document.documentElement.clientWidth*0.98 + "px";
+		document.getElementById("container").style.height=document.documentElement.clientHeight*0.88 + "px";
+		document.getElementById("container").style['margin']='auto';
+		document.getElementById("container").style.display="block";
+		function svgpanzoom(the_alert) {
+		if(window.hasOwnProperty("zoomTiger")){
+		if(the_alert){alert('there is not need to hit me anymore~');}
+		return 0
+		}
+		console.log("start svgpanzoom")
+		window.refresh_flag +=1 ;
+		// Expose to window namespase for testing purposes
 
-      window.zoomTiger = svgPanZoom('#demo-tiger', {
-	  maxZoom: 500,
-     	  minZoom:0.01,
-          zoomEnabled: true,
-          controlIconsEnabled: true,
-		  fit: false, 
-		  center: false,
-		  destroy: function() {this.destroy(); return this.pi}
-          // viewportSelector: document.getElementById('demo-tiger').querySelector('#g4') // this option will make library to misbehave. Viewport should have no transform attribute
-        });
+		window.zoomTiger = svgPanZoom('#demo-tiger', {
+		maxZoom: 500,
+		minZoom:0.01,
+		zoomEnabled: true,
+		controlIconsEnabled: true,
+		fit: false, 
+		center: false,
+		destroy: function() {this.destroy(); return this.pi}
+		// viewportSelector: document.getElementById('demo-tiger').querySelector('#g4') // this option will make library to misbehave. Viewport should have no transform attribute
+		});
 
-        document.getElementById('enable').addEventListener('click', function() {
-          window.zoomTiger.enableControlIcons();
-        });
-        document.getElementById('disable').addEventListener('click', function() {
-          window.zoomTiger.disableControlIcons();
-        });
-	    console.log("end svgpanzoom")
-      };
-     svgpanzoom(1);
-	 </script>
-	 <ul>
+		document.getElementById('enable').addEventListener('click', function() {
+		window.zoomTiger.enableControlIcons();
+		});
+		document.getElementById('disable').addEventListener('click', function() {
+		window.zoomTiger.disableControlIcons();
+		});
+		console.log("end svgpanzoom")
+		};
+		svgpanzoom(1);
+		</script>
+		<ul>
 <li>
 <td><input id="hightligh_ratio" type="value" value="3"  size=5 title="highlight ratio" /> <input type=button value="highlight ratio" /></td>
 <!--
@@ -20859,8 +20871,8 @@ function search_by_key(){
 	
 }
 </script>
-	 <h3>./out7, you can zoom in/out or drag, thanks https://github.com/ariutta/svg-pan-zoom</h3>
-    
+		<h3>./out7, you can zoom in/out or drag, thanks https://github.com/ariutta/svg-pan-zoom</h3>
+		
 <script>
 
 // 每个feature或者文字都可以点击后出现一个窗口，可以在里面设置这个feature的移动transform="translate(-110 0)"(即整体x-10,y不变)，color，opacity，text font size
