--- a/example/out6.html
+++ b/example/out6.html
@@ -3,18 +3,18 @@
 <head>
 <style>
 
-ul {
-    font-size:0;
-    text-align:center
-}
-ul li {
-    display:inline;
-    zoom:1
-}
-td {
-}
-</style>
-
+		ul {
+		font-size:0;
+		text-align:center
+		}
+		ul li {
+		display:inline;
+		zoom:1
+		}
+		td {
+		}
+		</style>
+		
 
 <script>// svg-pan-zoom v3.6.0
 // https://github.com/ariutta/svg-pan-zoom
@@ -20288,7 +20288,7 @@ var tracks_heigh={"pO83_CORR.indel.reverse":100,"pO83_CORR":100,"pO83_CORR.indel
 
 <line x1="130" y1="480" x2="1105" y2="480" style="stroke:green;stroke-width:0.5"/>
 <line x1="130" y1="475" x2="130" y2="480" style="stroke:green;stroke-width:0.5;opacity:1"/>
-<text class='myth' x="130" y="490" style="font-size:6px;fill:green;text-anchor:middle;font-family:Times New Roman;">0bp</text>
+<text class='myth' x="130" y="490" style="font-size:6px;fill:green;text-anchor:middle;font-family:Times New Roman;">1bp</text>
 <line x1="140.724545783943" y1="475" x2="140.724545783943" y2="480" style="stroke:green;stroke-width:0.5;opacity:1"/>
 <text class='myth' x="140.724545783943" y="490" style="font-size:6px;fill:green;text-anchor:middle;font-family:Times New Roman;">1,700</text>
 <line x1="151.449091567887" y1="475" x2="151.449091567887" y2="480" style="stroke:green;stroke-width:0.5;opacity:1"/>
@@ -25130,7 +25130,7 @@ var tracks_heigh={"pO83_CORR.indel.reverse":100,"pO83_CORR":100,"pO83_CORR.indel
 <rect x="1060.82748848284" y="299.5" width="44.1725115171593" height="1" style="fill:blue;opacity:0.2"   /></g>
 <text class='myth'  x="1059.82748848284" y="300" style="font-family:Times New Roman;font-size:10px;fill:black;text-anchor:end;alignment-baseline:middle" >5"</text>
  <text class='myth'  x="1106" y="300" style="font-family:Times New Roman;font-size:10px;fill:black;text-anchor:start;alignment-baseline:middle" >3"</text>
-<g class='myth'><title>NC_017659.1.fake:reverse:1-147049(12-147060)</title>
+<g class='myth'><title>NC_017659.1.fake:reverse:[147060 -> 12]</title>
 <rect x="130" y="399.5" width="927.666901754749" height="1" style="fill:blue;opacity:0.2"   /></g>
 <text class='myth'  x="129" y="400" style="font-family:Times New Roman;font-size:10px;fill:black;text-anchor:end;alignment-baseline:middle" >3"</text>
  <text class='myth'  x="1058.66690175475" y="400" style="font-family:Times New Roman;font-size:10px;fill:black;text-anchor:start;alignment-baseline:middle" >5"</text>
@@ -28064,69 +28064,72 @@ var tracks_heigh={"pO83_CORR.indel.reverse":100,"pO83_CORR":100,"pO83_CORR.indel
 				<polygon id="NC_017659.1.indelGL000187" points="132.428794192246,398.5 132.428794192246,401.5 133.034415601222,401.5 133.034415601222,401.5 133.223672291526,400 133.034415601222,398.5 133.034415601222,398.5" style="fill:rgb(50,205,50);stroke:black;stroke-width:0;opacity:1"/></g>
 
 
-<text class='myth' x="151.083101480408" y="108.5" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 151.083101480408 108.5)" >NC_017659.1:1-7001bp</text>
-<text class='myth' x="198.403582612972" y="108.5" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 198.403582612972 108.5)" >NC_017659.1:1-7001bp</text>
-<text class='myth' x="592.836605155546" y="208.5" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 592.836605155546 208.5)" >NC_017659.1.fake:11-147060bp</text>
-<text class='myth' x="1081.91374424142" y="208.5" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 1081.91374424142 208.5)" >NC_017659.1.fake:1-7002bp</text>
-<text class='myth' x="592.836605155546" y="308.5" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 592.836605155546 308.5)" >NC_017659.1.fake:11-147060bp</text>
-<text class='myth' x="1081.91374424142" y="308.5" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 1081.91374424142 308.5)" >NC_017659.1.fake:1-7002bp</text>
-<text class='myth' x="592.833450877375" y="409" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 592.833450877375 409)" >NC_017659.1.fake:reverse:1-147049(12-147060)bp</text>
+<text class='myth' x="151.083101480408" y="109" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 151.083101480408 109)" >NC_017659.1:1-7001bp</text>
+<text class='myth' x="198.403582612972" y="109" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 198.403582612972 109)" >NC_017659.1:1-7001bp</text>
+<text class='myth' x="592.836605155546" y="209" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 592.836605155546 209)" >NC_017659.1.fake:11-147060bp</text>
+<text class='myth' x="1081.91374424142" y="209" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 1081.91374424142 209)" >NC_017659.1.fake:1-7002bp</text>
+<text class='myth' x="592.836605155546" y="309" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 592.836605155546 309)" >NC_017659.1.fake:11-147060bp</text>
+<text class='myth' x="1081.91374424142" y="309" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 1081.91374424142 309)" >NC_017659.1.fake:1-7002bp</text>
+<text class='myth' x="592.833450877375" y="409" style="font-size:6px;fill:black;text-anchor:middle;alignment-baseline:baseline;" transform="rotate(0 592.833450877375 409)" >NC_017659.1.fake:reverse:[147060 -> 12]bp</text>
 
 </svg>
  </div>
-    <button id="enable" style='display:none'>enable</button>
-    <button id="disable" style='display:none'>disable</button>
-    <script>
-	window.refresh_flag = 0 ;
-    // Don't use window.onLoad like this in production, because it can only listen to one function.
-	document.getElementById("container").style.width=document.documentElement.clientWidth*0.98 + "px";
-	document.getElementById("container").style.height=document.documentElement.clientHeight*0.93 + "px";
-	document.getElementById("container").style['margin']='auto';
-	document.getElementById("container").style.display="block";
-    function svgpanzoom(the_alert) {
-	  if(window.hasOwnProperty("zoomTiger")){
-	  	if(the_alert){alert('there is not need to hit me anymore~');}
-	  	return 0
-	  }
-	  console.log("start svgpanzoom")
-	  window.refresh_flag +=1 ;
-      // Expose to window namespase for testing purposes
+		<button id="enable" style='display:none'>enable</button>
+		<button id="disable" style='display:none'>disable</button>
+		<script>
+		window.refresh_flag = 0 ;
+		// Don't use window.onLoad like this in production, because it can only listen to one function.
+		document.getElementById("container").style.width=document.documentElement.clientWidth*0.98 + "px";
+		document.getElementById("container").style.height=document.documentElement.clientHeight*0.88 + "px";
+		document.getElementById("container").style['margin']='auto';
+		document.getElementById("container").style.display="block";
+		function svgpanzoom(the_alert) {
+		if(window.hasOwnProperty("zoomTiger")){
+		if(the_alert){alert('there is not need to hit me anymore~');}
+		return 0
+		}
+		console.log("start svgpanzoom")
+		window.refresh_flag +=1 ;
+		// Expose to window namespase for testing purposes
 
-      window.zoomTiger = svgPanZoom('#demo-tiger', {
-	  maxZoom: 500,
-     	  minZoom:0.01,
-          zoomEnabled: true,
-          controlIconsEnabled: true,
-		  fit: false, 
-		  center: false,
-		  destroy: function() {this.destroy(); return this.pi}
-          // viewportSelector: document.getElementById('demo-tiger').querySelector('#g4') // this option will make library to misbehave. Viewport should have no transform attribute
-        });
+		window.zoomTiger = svgPanZoom('#demo-tiger', {
+		maxZoom: 500,
+		minZoom:0.01,
+		zoomEnabled: true,
+		controlIconsEnabled: true,
+		fit: false, 
+		center: false,
+		destroy: function() {this.destroy(); return this.pi}
+		// viewportSelector: document.getElementById('demo-tiger').querySelector('#g4') // this option will make library to misbehave. Viewport should have no transform attribute
+		});
 
-        document.getElementById('enable').addEventListener('click', function() {
-          window.zoomTiger.enableControlIcons();
-        });
-        document.getElementById('disable').addEventListener('click', function() {
-          window.zoomTiger.disableControlIcons();
-        });
-	    console.log("end svgpanzoom")
-      };
-     svgpanzoom(1);
-	 </script>
-	 <ul>
+		document.getElementById('enable').addEventListener('click', function() {
+		window.zoomTiger.enableControlIcons();
+		});
+		document.getElementById('disable').addEventListener('click', function() {
+		window.zoomTiger.disableControlIcons();
+		});
+		console.log("end svgpanzoom")
+		};
+		svgpanzoom(1);
+		</script>
+		<ul>
 <li>
-<td><input id="hightligh_ratio" type="value" value="3"  size=5 title="highlight ratio" /> <input type=button value="highlight ratio" /></td>
+<td><input type="button" value="clear" onclick="document.getElementById('hightligh_ratio').value=''" /><input id="hightligh_ratio" type="value" value="3"  size=5 title="highlight ratio" /> <input type=button value="highlight ratio" /></td>
 <!--
 	<input type="button" value="if you want pan and zoom the imgine, hit me" style="color:green;font-weight:bold" onclick="svgpanzoom(1);this.value='ok, you can pan and zoom now'" />
 -->
 </li><br>
 <li>
+<td><input type="button" value="clear" onclick="document.getElementById('search_the_key').value=''" /></td>
 <td><input id="search_the_key" type="value" value="use js regrex,example keywordA|keywordB"  size=50 title="use js regrex,example keywordA|keywordB" /></td>
 <td><input value="search by keyword of feature id" type="button" onclick="search_by_key()" /></td>
 </li><br>
 <li>
+<td><input type="button" value="clear" onclick="document.getElementById('search_the_rg').value=''" /></td>
 <td><input id="search_the_rg" type="value" value="track_name:chr_id:start:end" size=50 title="track_name:chr_id:start:end" /></td>
 <td><input id="search_by_rg" value="search by track_name1:chr_id1:start1:end1;track_name2:chr_id2:start2:end2;" type="button" onclick="search_by_rg()" /></td>
+<td><input id="remove_exists_rg" value="remove all exists regions" type="button" onclick="remove_exists_rg()"></td>
 </li><br>
 <li>
 <td><input onclick="saveSVG('svg-pan-zoom_viewport', svg_width_raw, svg_height_raw, svg_bgcolor)" type=button value='download current image to svg file' ></td>
@@ -28197,6 +28200,19 @@ function get_hightligh_ratio(){
 	hightligh_ratio = parseFloat(hightligh_ratio);
 	return hightligh_ratio;
 }
+
+function remove_exists_rg(){
+	for(var index in rg_lists){
+		var gid = rg_lists[index];
+		var exists_rg_pos = document.getElementById(gid);
+		if(exists_rg_pos){
+			exists_rg_pos.remove();
+			console.log("remove "+gid);
+		}
+	}
+	rg_lists = new Array();
+}
+var rg_lists = new Array();
 function search_by_rg(){
 	//if(window.refresh_flag >0){
 	//	alert('sorry, you neet to refresh the page, then you can search the region yet~');
@@ -28205,9 +28221,7 @@ function search_by_rg(){
 	var search_result_num = 0;	
 	var remove_exists=0;
 	var search_the_rg = document.getElementById("search_the_rg").value;
-	search_the_rg = search_the_rg.replace(/\s*$/, "");
-	search_the_rg = search_the_rg.replace(/^\s*/, "");
-	search_the_rg = search_the_rg.replace(/;\s*$/, "");
+	search_the_rg = search_the_rg.replace(/\s*$/, "").replace(/^\s*/, "").replace(/;\s*$/, "");
 	
 	var hightligh_ratio = get_hightligh_ratio();
 	console.log("hightligh_ratio is "+hightligh_ratio);
@@ -28300,7 +28314,7 @@ function search_by_rg(){
 									 var gid = track_name+"."+chr_id+"."+block_index+"."+rg_pos;
 									 var exists_rg_pos = document.getElementById(gid);
 									 if(exists_rg_pos){
-										exists_rg_pos.remove();
+										//exists_rg_pos.remove();
 										remove_exists = 1;
 									 	continue;
 									 }
@@ -28325,6 +28339,7 @@ function search_by_rg(){
 									 console.log('rect is '+rect.innerHTML);
 									 console.log("x="+x+",y="+y+",width="+width+",height="+height);
 									 search_result_num +=1;
+									 rg_lists.push(gid)
 									}
 								}
 	
@@ -28353,6 +28368,7 @@ function search_by_key(){
 	var new_stroke_width = 1;
 	var gs = document.getElementsByClassName("myth");
 	var key = document.getElementById("search_the_key").value;
+	key = key.replace(/\s*$/, "").replace(/^\s*/, "");
 	
 	if(key.length == 0){alert("keyword is empty");return 1;}
 
@@ -28426,8 +28442,8 @@ function search_by_key(){
 	
 }
 </script>
-	 <h3>./out6, you can zoom in/out or drag, thanks https://github.com/ariutta/svg-pan-zoom</h3>
-    
+		<h3>./out6, you can zoom in/out or drag, thanks https://github.com/ariutta/svg-pan-zoom</h3>
+		
 <script>
 
 // 每个feature或者文字都可以点击后出现一个窗口，可以在里面设置这个feature的移动transform="translate(-110 0)"(即整体x-10,y不变)，color，opacity，text font size
@@ -28560,7 +28576,7 @@ function feature_show(event) {
 						//alert('font size'+font_size);
 						div2.innerHTML+="<br>"+font_size+value+font_color+font_opacity+alignment_baseline+text_anchor+scale_xy+rotate+shift_xy+display+"<br><br>";
 						
-					}else if(tagname == "rect" || tagname == "polygon" || tagname == "path" || tagname == "polygon" || tagname == "circle"){
+					}else if(tagname == "rect" || tagname == "polygon" || tagname == "path" || tagname == "polygon" || tagname == "circle"|| tagname == "ellipse"){
 						// fill color, opacity, strike-border, strike color
 						//style="stroke:black;stroke-width:0.2;fill:orange;opacity:0.5"
 						var fill_color=childs[i].style['fill'];
